# messenger_rocket

./: .env  Cargo.toml  Dockerfile  Procfile  README.md  RustConfig  docker-compose-test.yml  docker-compose.yml  integration_test.sh  test.sh
.cargo-husky/hooks/: pre-commit
.circleci/: config.yml
integration/: Cargo.toml  README.md
integration/src/: main.rs
migrations/2019-02-03-143059_create_messages/: up.sql
scripts/: run.sh
src/: controllers.rs  db.rs  main.rs  postgres.rs  repository.rs  routes.rs  schema.rs  service.rs  socket.rs  types.rs
