[package]
name = "messenger-rocket"
version = "0.1.0"
authors = ["Sean Smith <sean.smith@tenx.tech>"]
edition = "2018"

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
rocket = "0.4.0-rc.1"
rocket_contrib = "0.4.0"
serde = "1.0.86"
serde_derive = "1.0.86"
r2d2-diesel = "1.0"
r2d2 = "0.8"
